WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154943
[[SetPrototypeOf]] isn't properly implemented everywhere
https://bugs.webkit.org/show_bug.cgi?id=154943
Summary
[[SetPrototypeOf]] isn't properly implemented everywhere
Saam Barati
Reported
2016-03-02 17:15:33 PST
We inline parts of OrdinarySetPrototypeOf in a few different places that call O.[[SetPrototypeOf]](v) rather than doing full dynamic dispatch. We should put those inlined bits inside OrdinarySetPrototypeOf and have the call sites not inline parts of OrdinarySetPrototypeOf. This is wrong because this behavior is observable with proxy.
Attachments
EWS testing
(9.26 KB, patch)
2016-03-02 18:50 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch for review
(10.93 KB, patch)
2016-03-02 19:08 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch for review
(10.96 KB, patch)
2016-03-02 19:10 PST
,
Saam Barati
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-03-02 18:50:52 PST
Created
attachment 272719
[details]
EWS testing
Saam Barati
Comment 2
2016-03-02 19:08:39 PST
Created
attachment 272720
[details]
patch for review
Saam Barati
Comment 3
2016-03-02 19:10:46 PST
Created
attachment 272721
[details]
patch for review
Benjamin Poulain
Comment 4
2016-03-02 19:13:32 PST
Comment on
attachment 272721
[details]
patch for review View in context:
https://bugs.webkit.org/attachment.cgi?id=272721&action=review
> Source/JavaScriptCore/ChangeLog:8 > + We were copy-pasting implememntation bits that belong in OrdinarySetPrototypeOf
Typo: implememntation
Saam Barati
Comment 5
2016-03-03 11:18:54 PST
landed in:
http://trac.webkit.org/changeset/197512
Saam Barati
Comment 6
2016-03-03 11:19:34 PST
(In reply to
comment #4
)
> Comment on
attachment 272721
[details]
> patch for review > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=272721&action=review
> > > Source/JavaScriptCore/ChangeLog:8 > > + We were copy-pasting implememntation bits that belong in OrdinarySetPrototypeOf > > Typo: implememntation
Oh man. I changed locally but then forgot to change it again once I ran prepare-ChangeLog :/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug