Source/JavaScriptCore/runtime/JSCell.cpp
@@ -280,7 +280,7 @@ bool JSCell::isExtensible(JSObject*, ExecState*)
     RELEASE_ASSERT_NOT_REACHED();
 }
 
-bool JSCell::setPrototype(JSObject*, ExecState*, JSValue)
+bool JSCell::setPrototype(JSObject*, ExecState*, JSValue, bool)
 {
     RELEASE_ASSERT_NOT_REACHED();
 }
